Fix temporal datatype canonicalization